--- a/index.html
+++ b/index.html
@@ -7,9 +7,6 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <script scr ="main.js"></script>
-
-
-
+    <script src ="main.js"></script>
 </body>
 </html>
