--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <script src ="main.js"></script>
+    <script src ="JS/main.js"></script>
 </body>
 </html>
